--- a/custom.css
+++ b/custom.css
@@ -124,3 +124,33 @@ html {
   -webkit-animation-iteration-count: 1;
   animation-iteration-count: 1;
 }
+
+.top-left {
+    position: absolute;
+    top: 500px;
+    left: 670px;
+    animation: blink 0.3s infinite alternate;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 48px;
+    color: #00aeff;
+  }
+
+  .image-arrow {
+    position: absolute;
+    top: 400px;
+    left: 680px;
+    animation: blink 0.3s infinite alternate;
+    width: 300px;
+    height: 300px;
+    transform: scaleX(-1);
+    transform: scaleY(-1);
+}
+  
+@keyframes blink {
+    50%, 50% {
+        opacity: 1; /* Fully visible for 75% of the time */
+    }
+    100% {
+        opacity: 0; /* Completely transparent for 25% of the time */
+    }
+}
